fix: actualizar color del indicador del carrusel para mejorar la visibilidad

--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,7 @@
 }
 
 @utility carousel-indicator {
-  @apply bg-grey-500 h-3 w-8 rounded;
+  @apply bg-grey-600 h-3 w-8 rounded;
   transition: all 0.25s;
 
   &.isActive {
